parser10/tree-sitter-able/test/corpus/control_flow.txt
==================
Control Flow Constructs
==================

fn process(items) {
  sum := 0
  for value in items {
    if value > 0 {
      sum = sum + value
    } else {
      continue
    }
  }

  while sum > 10 {
    sum = sum - 1
  }

  outcome := risky() rescue {
    case e: Error => default_value,
    case _ => nil
  }

  final := outcome ensure {
    cleanup()
  }

  final
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (assignment_target
                (pattern_base
                  (identifier)))
              (assignment_operator)
              (assignment_expression
                (range_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (unary_expression
                                        (exponent_expression
                                          (postfix_expression
                                            (primary_expression
                                              (number_literal)))))))))))))))))))))
      (for_statement
        (pattern_base
          (identifier))
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (identifier)))))))))))))))))))
        (block
          (expression_statement
            (pipe_expression
              (matchable_expression
                (assignment_expression
                  (range_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (if_expression
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier))))))))
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (number_literal)))))))))))))))))))
                                                  (block
                                                    (expression_statement
                                                      (pipe_expression
                                                        (matchable_expression
                                                          (assignment_expression
                                                            (assignment_target
                                                              (postfix_expression
                                                                (primary_expression
                                                                  (identifier))))
                                                            (assignment_operator)
                                                            (assignment_expression
                                                              (range_expression
                                                                (logical_or_expression
                                                                  (logical_and_expression
                                                                    (bitwise_or_expression
                                                                      (bitwise_xor_expression
                                                                        (bitwise_and_expression
                                                                          (equality_expression
                                                                            (comparison_expression
                                                                              (shift_expression
                                                                                (additive_expression
                                                                                  (multiplicative_expression
                                                                                    (unary_expression
                                                                                      (exponent_expression
                                                                                        (postfix_expression
                                                                                          (primary_expression
                                                                                            (identifier))))))
                                                                                  (multiplicative_expression
                                                                                    (unary_expression
                                                                                      (exponent_expression
                                                                                        (postfix_expression
                                                                                          (primary_expression
                                                                                            (identifier))))))))))))))))))))))
                                                  (block
                                                    (continue_statement))))))))))))))))))))))))
      (while_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (identifier))))))))
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (number_literal)))))))))))))))))))
        (block
          (expression_statement
            (pipe_expression
              (matchable_expression
                (assignment_expression
                  (assignment_target
                    (postfix_expression
                      (primary_expression
                        (identifier))))
                  (assignment_operator)
                  (assignment_expression
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (identifier)))))))))))))))))))))
          (expression_statement
            (pipe_expression
              (matchable_expression
                (assignment_expression
                  (range_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (unary_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (number_literal)))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (rescue_expression
              (assignment_expression
                (assignment_target
                  (pattern_base
                    (identifier)))
                (assignment_operator)
                (assignment_expression
                  (range_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (identifier))
                                              (call_suffix)))))))))))))))))
              (rescue_block
                (match_clause
                  (typed_pattern
                    (pattern_base
                      (identifier))
                    (type_union
                      (type_arrow
                        (type_suffix
                          (type_prefix
                            (type_atom
                              (type_identifier
                                (qualified_identifier
                                  (identifier)))))))))
                  (pipe_expression
                    (matchable_expression
                      (assignment_expression
                        (range_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (unary_expression
                                                (exponent_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (identifier))))))))))))))))))))
                (match_clause
                  (pattern_base)
                  (pipe_expression
                    (matchable_expression
                      (assignment_expression
                        (range_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (unary_expression
                                                (exponent_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (nil_literal)))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (ensure_expression
              (assignment_expression
                (assignment_target
                  (pattern_base
                    (identifier)))
                (assignment_operator)
                (assignment_expression
                  (range_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (unary_expression
                                          (exponent_expression
                                            (postfix_expression
                                              (primary_expression
                                                (identifier))))))))))))))))))
              (block
                (expression_statement
                  (pipe_expression
                    (matchable_expression
                      (assignment_expression
                        (range_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (unary_expression
                                                (exponent_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (identifier))
                                                    (call_suffix))))))))))))))))))))))))
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (identifier)))))))))))))))))))))))
