parser10/tree-sitter-able/test/corpus/debugging.txt
==================
Breakpoint Expressions
==================

breakpoint {}

breakpoint 'slow {}

---

(source_file
  (expression_statement
    (pipe_expression
      (matchable_expression
        (breakpoint_expression
          (block)))))
  (expression_statement
    (pipe_expression
      (matchable_expression
        (breakpoint_expression
          (label
            (identifier))
          (block))))))
